# ColabBTR

./: .gitignore  BTR.ipynb  CLAUDE.md  ColabBTR.ipynb  LICENSE  README.md  advanced.ipynb  development.ipynb  dilation.ipynb  pyproject.toml
benchmarks/: conftest.py  evaluate.py  prepare.py  program.md  report.py  test_benchmark.py  train.py
colabbtr/: morphology.py
data/double_tip/: images.npy  surfs.npy  tip.npy
data/mixed_tip/: images_frame101-120_double.npy
data/single_tip/: images.npy  tip.npy
scripts/: test_btr.py
tests/: test_btr.py  test_cross_validate.py  test_morphology.py  visualize.py
