[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colabbtr"
version = "0.0.1"
description = """End-to-end differentiable blind tip reconstruction on Colab implemented with PyTorch"""
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Yasuhiro Matsunaga", email = "ymatsunaga@mail.saitama-u.ac.jp"}]
dependencies = [
    "torch",
    "tqdm",
    "libasd @ git+https://github.com/matsunagalab/libasd",
]

[dependency-groups]
dev = [
    "pytest",
    "numpy",
    "matplotlib",
    "scipy",
]
notebook = [
    "numpy",
    "matplotlib",
    "gwyfile",
    "plotly",
    "scikit-learn",
    "gdown",
    "spmpy @ git+https://github.com/kogens/spmpy",
    "jupyter",
    "ipywidgets",
]
